<resources>
    <string name="app_name">controlgastos</string>
    <string name="titulo">EXPENSE CONTROL</string>
    <string name="create">CREATE</string>
    <string name="listarGastos">LIST EXPENSE</string>
    <string name="diagrama">DIAGRAM</string>
    <string name="categoria">CATEGORY:</string>
    <string name="precio">PRICE:</string>
    <string name="descripcion">DESCRIPTION:</string>
    <string name="nombre">NOMBRE:</string>
    <string name="fecha">DATE:</string>
    <string name="importe">AMOUNT:</string>
    <string name="descrpcionMovimiento">MOVIMIENTO</string>
    <string name="saldo">BALANCE:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">descripcion</string>
    <string name="introducir">INSERT GASTOS</string>
    <string name="descripcionProducto">DESCRIPTION OF PRODUCT:</string>
    <string name="detalleProducto">SHOPPING DETAIL</string>
    <string name="descripcionMovimiento">DESP MOVEMENT</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="diagramaGastos">EXPENSE AMOUNT DIAGRAM</string>
    <string name="endDate">DateToEnd</string>
    <string name="startToDate">DateOfToday</string>
    <string name="estadisticas">ESTATISTICS</string>
    <string name="pick_date">DATE</string>
    <string name="compra">BY</string>
    <string name="formMovimiento">MOVEMENTS FORM</string>
    <string name="list">LIST</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Helping</string>
    <string name="action_add">Add</string>
    <string name="hora">HORA:</string>
    <string name="get_photo">GET PHOTO</string>
    <string name="save_photo">SAVE PHOTO</string>
    <string name="deleteGasto">DELETE GASTO</string>
    <string name="edit">EDITING</string>
    <string name="update_expensive">UPDATE EXPENSIVE</string>
    <string name="save">SAVE</string>

</resources>
